# duid-ui

./: .gitignore  Cargo.toml  README.md
duid-components/: Cargo.toml
duid-components/src/: lib.rs
duid-components/src/inputs/: mod.rs
duid-components/src/inputs/autocomplete/: mod.rs  model.rs  msg.rs  view.rs
duid-components/src/inputs/button/: style.rs  view.rs
duid-components/src/inputs/button_group/: msg.rs  view.rs
duid-components/src/inputs/checkbox/: data.rs  mod.rs  model.rs  msg.rs  view.rs
duid-components/src/inputs/input/: data.rs  input_types.rs  mod.rs  model.rs  msg.rs  size.rs  style_form_context.rs  style_normal_context.rs  styles.rs  view.rs
duid-components/src/layouts/: mod.rs
duid-components/src/navigation/: mod.rs
examples/auto_complete_app/: Cargo.toml  index.html
examples/auto_complete_app/src/: app.rs
examples/button_app/: Cargo.toml  index.html
examples/button_app/src/: app.rs  lib.rs
examples/holy_grail_app/: Cargo.toml  index.html
examples/holy_grail_app/src/: app.rs  lib.rs
examples/inputs_app/: Cargo.toml  index.html
examples/inputs_app/src/: app.rs
examples/modal_app/: Cargo.toml  dev.bat  index.html
examples/modal_app/src/: app.rs
examples/navigation_app/: Cargo.toml  index.html
examples/navigation_app/src/: app.rs  lib.rs  tab.rs
examples/page_app/: Cargo.toml  index.html
examples/page_app/src/: app.rs  lib.rs
examples/select_app/: Cargo.toml  index.html
examples/select_app/src/: app.rs
examples/text_app/: Cargo.toml  index.html
examples/text_app/src/: app.rs  lib.rs
src/: lib.rs
(+24 files in other folders)
