[package]
name = "duid-ui"
version = "0.2.0"
edition = "2021"


[dependencies]
duid-components = { version = "0.2", path = "duid-components" }
duid = { version = "0.2", git = "https://github.com/djedou/duid" , branch = "feat/dom_without_patches" }

[workspace]
members = [
    "duid-components"
]

exclude = [
    "examples/navigation_app",
    "examples/button_app",
    "examples/text_app",
    "examples/page_app",
    "examples/select_app",
    "examples/auto_complete_app",
    "examples/inputs_app"
]
